[Doc] New upgrade notes for 3.5 (#59243)